HOTFIX: Home page containers spacing fix

--- a/learnify/web/src/pages/style.css
+++ b/learnify/web/src/pages/style.css
@@ -569,7 +569,6 @@ h1 {
     width: 720px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     overflow: scroll;
 }
 
